static/style.css
/* Eric Meyer's CSS Reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
/* End of Eric Meyer's CSS Reset */

html {
    height: 100%;
}
article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
    display: block;
}
body {
    font: 12px/18px Arial, sans-serif;
    height: 100%;
    background: #f5f5f5;
}
.wrapper {
    width: 100%;
    min-width: 1000px;
    min-height: 100%;
    height: auto !important;
    height: 100%;
    position: relative;
}

.blocker {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 3;
    background-color: rgba(245,245,245,0.55);
}


/* Layout
-----------------------------------------------------------------------------*/

.header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding: 15px;
    height: 50px;
    font-size: 36px;
    color: white;
    background: #3e8e41;
    text-align: center;
    line-height: 50px;
    z-index: 5;
    -webkit-box-shadow: 0 3px 7px 0 rgba(0,0,0,0.40);
    box-shadow: 0 3px 7px 0 rgba(0,0,0,0.40);
}

.main-navigation {
    position: absolute;
    top: 80px;
    left: 0;
    bottom: 0;
    width: 240px;
    padding-left: 15px;
    padding-top: 15px;
    padding-bottom: 15px;
    overflow-y: scroll;
    z-index: 4;
    background: #efefef;
    -webkit-box-shadow: 3px 0 7px 0 rgba(0,0,0,0.30);
    box-shadow: 3px 0 7px 0 rgba(0,0,0,0.30);
    min-height: 503px;
}

.content {
    position: absolute;
    top: 99px;
    left: 275px;
    right: 255px;
    bottom: 19px;
    z-index: 0;
    background: white;
    min-height: 495px;
}

.sub-navigation {
    position: absolute;
    top: 80px;
    right: 0;
    bottom: 0;
    width: 238px;
    padding-top: 15px;
    padding-left: 15px;
    z-index: 1;
}

#logo {
    max-width: 70%;
    height: 100%;
    margin: auto;
    display: block;
    position: relative;
    z-index: 1;
    vertical-align: middle;
}

#console {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 15px;
    overflow-y: scroll;
    border-style: dotted;
    border-width: 1px;
    font-size: 14px;
    font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
    z-index: 2;
}


/* Buttons etc.
-----------------------------------------------------------------------------*/

.btn {
    width: 220px;
    border: none;
    color: black;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    margin: 4px 2px;
    transition: 0.3s;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    cursor: pointer;
    background-color: white;
    outline: none;
}

.btnactive {
    background-color: #3e8e41;
    width: 220px;
    border: none;
    color: white;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    margin: 4px 2px;
    transition: 0.3s;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    outline: none;
}

.btn:hover {
    background-color: #3e8e41;
    color: white;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.5);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.5);
    outline: none;
}

.main-navigation .btn:hover {
    background-color: white;
    color: black;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
}

input[type=number], select {
    display: inline-block;
    box-sizing: border-box;
    width: 444px;
    border: none;
    color: black;
    padding: 16px 32px;
    text-align: right;
    font-size: 16px;
    margin: 4px 2px;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    -moz-appearance: textfield;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=text], select {
    display: inline-block;
    box-sizing: border-box;
    width: 444px;
    border: none;
    color: black;
    padding: 16px 32px;
    text-align: right;
    font-size: 16px;
    margin: 4px 2px;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
}

input[type=submit] {
    width: 220px;
    border: none;
    color: black;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    margin: 4px 2px;
    transition: 0.3s;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.35);
    cursor: pointer;
    background-color: white;
}

input[type=submit]:hover {
    background-color: #3e8e41;
    color: white;
    -webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.5);
    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.5);
}
/* ... */

